--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+
   <link href="css/index.css" rel="stylesheet">
 
   <script src="js/index.js" async></script>
